--- a/PixelMania/public/stylesheets/style.css
+++ b/PixelMania/public/stylesheets/style.css
@@ -1,4 +1,5 @@
 /* FONTS */
+
 @font-face {
     font-family: zig;
     src: url('zig.ttf');
@@ -6,9 +7,10 @@
 
 
 /* GENERAL */
+
 body {
-	overflow: hidden;
-	background: limegreen;
+    overflow: hidden;
+    background: limegreen;
     font-family: zig, Arial, sans-serif;
     text-align: center;
     padding: 20px;
@@ -22,12 +24,14 @@ h1 {
 
 
 /* LOGIN */
+
 .form-control {
     text-align: center;
 }
 
 
 /* GAME */
+
 canvas {
     display: block;
     margin: auto;
@@ -36,36 +40,37 @@ canvas {
 }
 
 #quit {
-  float: right;
-  margin-top: 20px;
-  display: inline-block;
+    float: right;
+    margin-top: 20px;
+    display: inline-block;
 }
 
 .ball {
-  background: red;
-  width: 80px;
-  height: 80px;
-  position: absolute;
-  text-align: center;
-  top: 20px;
-  left: 20px;
+    background: red;
+    width: 80px;
+    height: 80px;
+    position: absolute;
+    text-align: center;
+    top: 20px;
+    left: 20px;
 }
 
 #yourColor {
-  height: 20px;
-  width: 20px;
-  background: #FFF;
-  display: inline-block;
-  border-radius: 50%;
+    height: 20px;
+    width: 20px;
+    background: #FFF;
+    display: inline-block;
+    border-radius: 50%;
 }
 
 .message {
-  display: inline-block;
-  margin-top: 10px;
+    display: inline-block;
+    margin-top: 10px;
 }
 
 
 /* HIGH SCORES */
+
 #highScoresTable {
     margin: auto;
     margin-top: 50px;
@@ -76,7 +81,8 @@ canvas {
     font-size: 18px;
 }
 
-#highScoresTable th, #highScoresTable td {
+#highScoresTable th,
+#highScoresTable td {
     padding: 2px 20px;
     text-align: center;
 }
