major overhaul of the app; moved balls to server side rendering; converted arrays to objects; hopefully improved app speed and performance

--- a/PixelMania/public/stylesheets/style.css
+++ b/PixelMania/public/stylesheets/style.css
@@ -32,11 +32,17 @@ h1 {
 
 /* GAME */
 
+#gameContainer {
+    display: none;
+}
+
 canvas {
     display: block;
     margin: auto;
     border: 5px solid #000;
     background: #ccc;
+    width: 1000px;
+    height: 500px;
 }
 
 #quit {
