--- a/PixelMania/public/stylesheets/style.css
+++ b/PixelMania/public/stylesheets/style.css
@@ -1,8 +1,8 @@
 /* FONTS */
 
 @font-face {
-    font-family: zig;
-    src: url('zig.ttf');
+    font-family: charybdis;
+    src: url('charybdis.ttf');
 }
 
 
@@ -10,23 +10,34 @@
 
 body {
     overflow: hidden;
-    background: limegreen;
-    font-family: zig, Arial, sans-serif;
+    background: #92f592;
+    font-family: charybdiszzz, monospace;
     text-align: center;
     padding: 20px;
 }
 
 h1 {
     text-align: center;
-    margin: 20px;
-    font-size: 36px;
+    margin: 10px 20px;
+    font-size: 64px;
+}
+
+p,
+.btn,
+.form-control {
+    font-size: 18px;
 }
 
 
 /* LOGIN */
 
+#loginForm {
+    margin: 40px auto;
+}
+
 .form-control {
     text-align: center;
+    height: 38px;
 }
 
 
@@ -39,16 +50,17 @@ h1 {
 canvas {
     display: block;
     margin: auto;
-    border: 5px solid #000;
-    background: #ccc;
+    border: 2px solid #000;
+    background: #ececec;
     width: 1000px;
     height: 500px;
 }
 
 #quit {
-    float: right;
-    margin-top: 20px;
     display: inline-block;
+    position: absolute;
+    top: 40px;
+    right: 40px;
 }
 
 .ball {
@@ -66,7 +78,10 @@ canvas {
     width: 20px;
     background: #FFF;
     display: inline-block;
+    border: 1px solid #000;
     border-radius: 50%;
+    position: relative;
+    top: 3px;
 }
 
 .message {
@@ -78,17 +93,23 @@ canvas {
 /* HIGH SCORES */
 
 #highScoresTable {
-    margin: auto;
-    margin-top: 50px;
+    margin: 20px auto;
     text-align: center;
 }
 
 #highScoresTable th {
-    font-size: 18px;
-}
-
-#highScoresTable th,
-#highScoresTable td {
+    font-size: 24px;
     padding: 2px 20px;
     text-align: center;
+}
+
+#highScoresTable td {
+    font-size: 20px;
+    padding: 2px 20px;
+    text-align: center;
+}
+
+#again {
+    font-size: 50px;
+    text-decoration: none;
 }
