added 7 new projects to my portfolio

--- a/styles/style.css
+++ b/styles/style.css
@@ -205,7 +205,8 @@ nav li a:focus {
     margin: 0;
 }
 
-.tile .projectRepo a:hover {
+.tile .projectRepo a:hover,
+.tile .projectRepo a:focus {
     text-decoration: none;
 }
 
