--- a/Weather/style.css
+++ b/Weather/style.css
@@ -3,7 +3,7 @@ body {
 	margin: 0px;
 	margin-top: 20px;
 	text-align: center;
-	background: #DED5D0 url(bg2.jpg) top no-repeat;
+	background: #DED5D0 url(bg.jpg) top no-repeat;
 	font-family: "Raleway";
 }
 
