fixes api in utah weather apps

--- a/UtahWeather/style.css
+++ b/UtahWeather/style.css
@@ -12,7 +12,8 @@ body::after {
   left: 0;
   bottom: 0;
   right: 0;
-  position: absolute;
+	position: fixed;
+	overflow: scroll;
   z-index: -1;   
 }
 
